--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start --port 3005",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build --src '**/*'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
