--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "staff-monitoring-system",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "homepage": "https://moalamir52.github.io/Staff",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
