--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "scripts": {
     "start": "react-scripts start --port 3005",
+    "email-service": "node automation-service.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build --src '**/*'",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
