--- a/.github/workflows/email-automation.yml
+++ b/.github/workflows/email-automation.yml
@@ -2,8 +2,8 @@ name: Staff Email Automation
 
 on:
   schedule:
-    # يعمل كل يوم الساعة 3:00 مساءً UTC (7:00 مساءً دبي UTC+4)
-    - cron: '0 15 * * *'
+    # يعمل كل يوم الساعة 5:00 فجراً UTC (9:00 صباحاً دبي UTC+4)
+    - cron: '0 5 * * *'
   workflow_dispatch: # للتشغيل اليدوي
 
 jobs:
