--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "react-scripts start --port 3005",
     "email-service": "node automation-service.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --src '**/*'",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts test"
